Adding CRUD operations and database persistence

--- a/SmartLights/appsettings.json
+++ b/SmartLights/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb+srv://admin:admin@smartlights.0tdmts4.mongodb.net/?retryWrites=true&w=majority",
+    "Database": "SmartLights"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
