Adding IaC and Raspi Firmware

--- a/ControlDashboard/appsettings.Development.json
+++ b/ControlDashboard/appsettings.Development.json
@@ -1,9 +1,15 @@
 {
-  "DetailedErrors": true,
+  "GoogleMaps": {
+    "APIKey": "https://maps.googleapis.com/maps/api/js?key=&callback=initMap&v=weekly"
+  },
+  "Backend": {
+    "URL": "https://localhost:7261"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
