--- a/ControlDashboard/appsettings.json
+++ b/ControlDashboard/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "GoogleMaps": {
+    "APIKey": "https://maps.googleapis.com/maps/api/js?key=&callback=initMap&v=weekly"
+  },
+  "Backend": {
+    "URL": "https://smartlightsapi.azurewebsites.net"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
