Adding time taken to TrafficData

--- a/ControlDashboard/appsettings.json
+++ b/ControlDashboard/appsettings.json
@@ -1,6 +1,6 @@
 {
   "GoogleMaps": {
-    "APIKey": "https://maps.googleapis.com/maps/api/js?key=&callback=initMap&v=weekly"
+    "APIKey": "https://maps.googleapis.com/maps/api/js?key=AIzaSyD7m9x4pVexREGuY2Waki0p3rKWMc_GpVM&callback=initMap&v=weekly"
   },
   "Backend": {
     "URL": "https://smartlightsapi.azurewebsites.net"
